--- a/index.html
+++ b/index.html
@@ -1,18 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Shoaib Mahmud</title>
-    <style>
-        body { font-family: sans-serif; text-align: center; margin-top: 50px; }
-        h1 { color: #333; }
-        p { color: #666; }
-    </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Shoaib Mahmud — CV</title>
+  <meta name="description" content="Online CV of Shoaib Mahmud — CSE student, aspiring developer." />
+  <meta property="og:title" content="Shoaib Mahmud — CV" />
+  <meta property="og:description" content="CSE student focused on C programming, Android game development, and ML club activities." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="images/shoaib.png" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Fira+Code:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    /* Print-friendly adjustments for CV */
+    @media print{
+      .bg-animated{ display:none !important; }
+      body{ background:#fff; color:#000; }
+      .card{ box-shadow:none; border-color:#000 !important; background:#fff; }
+      .brand, .hero-text .name { color:#000 !important; background:none !important; -webkit-text-fill-color: initial !important; }
+      .nav, .site-footer, .nav-toggle{ display:none !important; }
+      .btn{ display:none !important; }
+      a{ color:#000; text-decoration:underline; }
+    }
+  </style>
 </head>
 <body>
-    <h1>Hello, I am Shoaib Mahmud!</h1>
-    <p>This is my personal page, hosted on GitHub Pages.</p>
-    <p>I am a first-semester CSE student at Uttara University.</p>
-    <p>A proud member of the Quad-Core Coders.</p>
+  <div class="bg-animated"></div>
+  <header class="container site-header">
+    <nav class="nav">
+      <a class="brand" href="#top">SM</a>
+      <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">☰</button>
+      <ul class="nav-links">
+        <li><a href="#about">Summary</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#activities">Activities</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+    <section id="top" class="hero reveal">
+      <div class="hero-text">
+        <h1><span class="hi">Online CV —</span> <span class="name">Shoaib Mahmud</span></h1>
+        <p class="subtitle">CSE Student • Developer-in-Training • Linux Enthusiast</p>
+        <div class="cta">
+          <a class="btn primary" href="#education">View Education</a>
+          <a class="btn ghost" href="#contact">Contact</a>
+        </div>
+      </div>
+      <div class="hero-photo">
+        <div class="photo-frame floating">
+          <img src="images/shoaib.png" alt="Portrait of Shoaib Mahmud" onerror="this.src='images/placeholder.svg'"/>
+        </div>
+      </div>
+    </section>
+  </header>
+
+  <main class="container">
+    <section id="about" class="card reveal">
+      <h2>Career Summary</h2>
+      <p>
+        Motivated first‑semester Computer Science &amp; Engineering student at Uttara University (expected graduation 2029).
+        Focused on C programming, algorithms, and systems. I enjoy building in public, exploring Linux workflows,
+        and collaborating on team projects with clear scope and architecture.
+      </p>
+      <ul class="facts">
+        <li><strong>Location:</strong> Jurain, Dhaka-1204</li>
+        <li><strong>Languages:</strong> Bengali (Native), English (Professional Working Proficiency)</li>
+        <li><strong>Interests:</strong> Linux & open-source, mobile tech, game development, competitive problem solving</li>
+      </ul>
+    </section>
+
+    <section id="education" class="card reveal">
+      <h2>Education</h2>
+      <div class="edu">
+        <h3>B.Sc. in Computer Science &amp; Engineering (CSE)</h3>
+        <p><strong>Uttara University</strong>, Dhaka, Bangladesh — <em>Expected Graduation: 2029</em></p>
+      </div>
+      <div class="edu">
+        <h3>Higher Secondary Certificate (Science)</h3>
+        <p><strong>Bangabandhu Govt. College</strong> — 2024 • GPA: 5.00/5.00</p>
+      </div>
+      <div class="edu">
+        <h3>Secondary School Certificate (Science)</h3>
+        <p><strong>Satair High School, Boalmari, Faridpur</strong> — 2022 • GPA: 5.00/5.00</p>
+      </div>
+    </section>
+
+    <section id="skills" class="card reveal">
+      <h2>Technical Skills</h2>
+      <div class="badges">
+        <span class="badge">C (Intermediate)</span>
+        <span class="badge">Python (Basic)</span>
+        <span class="badge">HTML (Familiar)</span>
+        <span class="badge">Git &amp; GitHub</span>
+        <span class="badge">VS Code</span>
+        <span class="badge">Android Studio</span>
+        <span class="badge">Godot Engine</span>
+        <span class="badge">Ubuntu • Fedora • Kali • Zorin • Linux Mint</span>
+      </div>
+      <p class="note">Adaptable, curious, and quick to learn new tools.</p>
+    </section>
+
+    <section id="projects" class="card reveal">
+      <h2>Projects</h2>
+
+      <article class="project">
+        <div class="project-body">
+          <h3>Android-based Game Development <span class="status">In Progress</span></h3>
+          <p>
+            Team project to design and develop an Android game. Lead responsibilities include timeline management,
+            defining scope and architecture, and implementing core game logic in C.
+          </p>
+          <ul class="project-meta">
+            <li>Role: Team Lead &amp; Gameplay Programmer</li>
+            <li>Tech: C, Android toolchain, Git</li>
+          </ul>
+        </div>
+      </article>
+
+      <article class="project">
+        <div class="project-body">
+          <h3>Coursework Foundations</h3>
+          <p>
+            Programming assignments in C (data structures and problem‑solving);
+            analytical coursework in Differential Calculus and Linear Algebra; professional
+            communication practice through English assignments.
+          </p>
+        </div>
+      </article>
+    </section>
+
+    <section id="activities" class="card reveal">
+      <h2>Activities</h2>
+      <article class="project">
+        <div class="project-body">
+          <h3>Member, Uttara University Machine Learning Club</h3>
+          <p>August 2025 – Present</p>
+          <p>
+            Participating in workshops on ML fundamentals, exploring datasets, and experimenting
+            with introductory algorithms in a collaborative setting.
+          </p>
+        </div>
+      </article>
+    </section>
+
+    <section id="strengths" class="card reveal">
+      <h2>Interpersonal Strengths</h2>
+      <ul class="project-meta">
+        <li>Teamwork &amp; Collaboration</li>
+        <li>Problem Solving</li>
+        <li>Adaptability &amp; Eagerness to Learn</li>
+      </ul>
+    </section>
+
+    <section id="contact" class="card reveal">
+      <h2>Contact & Links</h2>
+      <div class="contact-grid">
+        <div>
+          <p><strong>Email:</strong> <a href="mailto:2252081088@uttara.ac.bd">2252081088@uttara.ac.bd</a></p>
+          <p><strong>Phone:</strong> <a href="tel:+8801522134051">+8801522134051</a></p>
+          <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/shoaib-mahmud-2383a237a" target="_blank" rel="noopener">linkedin.com/in/shoaib-mahmud-2383a237a</a></p>
+          <p><strong>GitHub:</strong> <a href="https://github.com/shoaib880" target="_blank" rel="noopener">github.com/shoaib880</a></p>
+        </div>
+        <ul class="social-list">
+          <li><a aria-label="Facebook" href="https://www.facebook.com/share/17RALhjYdM/" target="_blank" rel="noopener">
+            <svg viewBox="0 0 24 24" class="icon"><path d="M22 12a10 10 0 1 0-11.6 9.9v-7h-2v-3h2v-2.3c0-2 1.2-3.1 3-3.1.9 0 1.8.1 1.8.1v2h-1c-1 0-1.3.6-1.3 1.2V12h2.2l-.4 3h-1.8v7A10 10 0 0 0 22 12z"/></svg>
+          </a></li>
+          <li><a aria-label="Instagram" href="https://www.instagram.com/shoaibm880/" target="_blank" rel="noopener">
+            <svg viewBox="0 0 24 24" class="icon"><path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7zm5 3.5a5.5 5.5 0 1 1 0 11 5.5 5.5 0 0 1 0-11zm6.2-.9a1.1 1.1 0 1 1 0 2.2 1.1 1.1 0 0 1 0-2.2z"/></svg>
+          </a></li>
+          <li><a aria-label="X" href="https://x.com/shoaibm880" target="_blank" rel="noopener">
+            <svg viewBox="0 0 24 24" class="icon"><path d="M3 3h4.7l5 6.7L18 3h3.7l-6.6 8.6L22 21h-4.7l-5.4-7.1L9 21H5.3l6.6-8.7L3 3z"/></svg>
+          </a></li>
+          <li><a aria-label="Threads" href="https://www.threads.com/@shoaibm880" target="_blank" rel="noopener">
+            <svg viewBox="0 0 24 24" class="icon"><path d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm3.6 12.7c-.4 1.7-1.9 2.9-3.8 2.9-2.3 0-4.1-1.9-4.1-4.2s1.8-4.2 4.1-4.2c1.8 0 3.3 1.1 3.8 2.7-.3-.1-.7-.2-1.1-.2-1.4 0-2.5 1-2.5 2.3s1.1 2.3 2.5 2.3c.5 0 .8-.1 1.1-.3z"/></svg>
+          </a></li>
+          <li><a aria-label="WhatsApp" href="https://wa.me/8801522134051" target="_blank" rel="noopener">
+            <svg viewBox="0 0 24 24" class="icon"><path d="M20 3.5A10 10 0 1 0 4 19.2L3 22l2.9-.9A10 10 0 1 0 20 3.5zM6.4 12a5.6 5.6 0 1 1 11.2 0 5.6 5.6 0 0 1-11.2 0zm8 2.6c-.4.1-1 .2-2-.2-1.8-.7-3-2.3-3.3-2.7-.3-.5-.8-1.1-.8-1.9 0-.9.5-1.3.7-1.3h.5l.4.1c.1 0 .3.1.3.3l.4 1c.1.2.1.3 0 .4l-.2.3-.2.3c-.1.2-.2.4 0 .7.2.3.7 1 1.4 1.6.9.8 1.6 1 1.8 1.1h.4l.3-.1h.3c.2 0 .3.1.4.3l.5 1.1c.1.2 0 .4-.2.5z"/></svg>
+          </a></li>
+          <li><a aria-label="Messenger" href="https://m.me/shoaib911" target="_blank" rel="noopener">
+            <svg viewBox="0 0 24 24" class="icon"><path d="M12 2C6.5 2 2 6.1 2 11.1 2 15 4.6 18.3 8.3 19.7v2.3l2.2-1.2c.5.1 1 .1 1.5.1 5.5 0 10-4.1 10-9.1S17.5 2 12 2zm5 10.7L14 11l-3.2 1.9L7 11l4.3 4.6 3.2-1.9 2.5 2v-3z"/></svg>
+          </a></li>
+          <li><a aria-label="LinkedIn" href="https://www.linkedin.com/in/shoaib-mahmud-2383a237a" target="_blank" rel="noopener">
+            <svg viewBox="0 0 24 24" class="icon"><path d="M6 9h3v10H6zM7.5 5.5A1.5 1.5 0 1 1 6 7a1.5 1.5 0 0 1 1.5-1.5zM18 9.5c-2 0-3 .9-3.5 1.6V9H11v10h3.5v-5.4c0-1.4.9-2.2 2.2-2.2 1.2 0 1.8.8 1.8 2.2V19H22v-5.8c0-2.8-1.5-3.7-4-3.7z"/></svg>
+          </a></li>
+          <li><a aria-label="GitHub" href="https://github.com/shoaib880" target="_blank" rel="noopener">
+            <svg viewBox="0 0 24 24" class="icon"><path d="M12 .5A12 12 0 0 0 0 12.7c0 5.4 3.4 9.9 8.1 11.5.6.1.8-.3.8-.6v-2.2c-3.3.8-4-1.6-4-1.6-.6-1.6-1.4-2-1.4-2-1.1-.8.1-.8.1-.8 1.2.1 1.8 1.3 1.8 1.3 1 1.8 2.8 1.3 3.5 1 .1-.8.4-1.3.7-1.6-2.6-.3-5.3-1.3-5.3-5.9 0-1.3.5-2.3 1.2-3.1 0-.3-.5-1.6.1-3.3 0 0 1-.3 3.4 1.2a11.1 11.1 0 0 1 6.2 0c2.4-1.5 3.4-1.2 3.4-1.2.6 1.7.1 3 .1 3 .8.8 1.2 1.8 1.2 3.1 0 4.6-2.7 5.6-5.3 5.9.4.4.7 1 .7 2v3c0 .3.2.7.8.6A12 12 0 0 0 24 12.7 12 12 0 0 0 12 .5z"/></svg>
+          </a></li>
+        </ul>
+      </div>
+    </section>
+  </main>
+
+  <footer class="container site-footer">
+    <p>&copy; <span id="year"></span> Shoaib Mahmud • Online CV</p>
+  </footer>
+
+  <script>
+    // Mobile nav toggle
+    const btn = document.querySelector('.nav-toggle');
+    const links = document.querySelector('.nav-links');
+    btn.addEventListener('click', () => {
+      const open = links.classList.toggle('open');
+      btn.setAttribute('aria-expanded', open ? 'true' : 'false');
+    });
+
+    // Scroll reveal with IntersectionObserver
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(e => {
+        if (e.isIntersecting) e.target.classList.add('revealed');
+      });
+    }, { threshold: 0.15 });
+
+    document.querySelectorAll('.reveal').forEach(el => observer.observe(el));
+
+    // Year in footer
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
