--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Shoaib Mahmud — CV</title>
-  <meta name="description" content="Online CV of Shoaib Mahmud — CSE student, aspiring developer." />
+  <meta name="description" content="Shoaib Mahmud — CSE student, aspiring developer." />
   <meta property="og:title" content="Shoaib Mahmud — CV" />
   <meta property="og:description" content="CSE student focused on C programming, Android game development, and ML club activities." />
   <meta property="og:type" content="website" />
